Fix the alignment of legacy dialog form buttons

--- a/wcfsetup/install/files/style/ui/dialog.scss
+++ b/wcfsetup/install/files/style/ui/dialog.scss
@@ -168,6 +168,7 @@
 			column-gap: 10px;
 			display: flex;
 			flex-direction: row-reverse;
+			justify-content: end;
 			left: 0;
 			margin-bottom: 0;
 			padding: 20px;
